--- a/src/style/available.rooms.none.scss
+++ b/src/style/available.rooms.none.scss
@@ -1,177 +1,353 @@
-.available-rooms {
-  position: relative;
-  width: 960px;
-  .section{
-    position: relative;
-    margin-top: 54px;
-  }
-  .available-rooms-title-box {
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    width: 299px;
-    height: 56px;
-    background: #FAFBFC;
-    left: calc(50% - 299px / 2);
-    z-index: 2;
-    .available-rooms-title {
-      position: static;
-      width: 251px;
-      height: 32px;
-      margin: 0 auto;
-      font-family: Inter;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 26px;
-      line-height: 32px;
-      display: flex;
-      align-items: center;
-      color: rgba(47, 72, 106, 0.24);
-      flex: none;
-      order: 0;
-      align-self: center;
+@media only screen and (max-width:1199px){
+  .available-rooms{
+    position:relative;
+    width:360px;
+    .section{
+      position:relative;
     }
-  }
-  .available-rooms-line {
-    position: absolute;
-    width: 960px;
-    height: 1px;
-    top: 30px;
-    background: #DCDFE2;
-  }
-  .available-rooms-none-text {
-    position: relative;
-    width: 631px;
-    height: 48px;
-    top: 18px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    margin: 0 auto;
-    align-items: center;
-    text-align: center;
-    /* Second Black */
-    color: rgba(47, 72, 106, 0.75);
-    margin-bottom: 32px;
-  }
-  .alternative-dates {
-    position: relative;
-    width: 960px;
-    display: flex;
-    justify-content: space-between;
-    .alternative-date {
-      width: 304px;
-      height: 270px;
-      background: #FFFFFF;
-      /* 30 dp */
-      box-shadow: 0px -2px 1px rgba(85, 89, 106, 0.0196802), 0px 2px 1px rgba(85, 89, 106, 0.0196802), 0px 4px 2px rgba(85, 89, 106, 0.0282725), 0px 6px 4px rgba(85, 89, 106, 0.035), 0px 8px 8px rgba(85, 89, 106, 0.0417275), 0px 18px 16px rgba(85, 89, 106, 0.0503198), 0px 30px 40px rgba(85, 89, 106, 0.07);
-      border-radius: 8px;
-      .group-110 {
-        position: relative;
-        display: flex;
-        width: 223px;
-        height: 24px;
-        left: 48px;
-        top: 20px;
-        .first-date {
-          position: relative;
-          width: 110px;
-          height: 24px;
-          font-family: Inter;
-          font-style: normal;
-          font-weight: 600;
-          font-size: 16px;
-          line-height: 24px;
-          display: flex;
-          align-items: center;
-          text-align: center;
-          color: #2F486A;
-          justify-content: flex-end;
-          left: -45px;
-        }
-        .minus-icon {
-          position: relative;
-          width: 16px;
-          height: 16px;
-          left: -8px;
-          top: 6px;
-        }
-        .second-date {
-          position: relative;
-          width: 110px;
-          height: 24px;
-          left: 30px;
-          font-family: Inter;
-          font-style: normal;
-          font-weight: 600;
-          font-size: 16px;
-          line-height: 24px;
-          display: flex;
-          align-items: center;
-          text-align: center;
-          justify-content: flex-start;
-          color: #2F486A;
-        }
+    .available-rooms-title-box{
+      display:flex;
+      flex-direction:row;
+      position:absolute;
+      width:299px;
+      height:56px;
+      background:#FAFBFC;
+      left:calc(50% - 299px / 2);
+      z-index:2;
+      .available-rooms-title{
+        position:static;
+        width:251px;
+        height:32px;
+        margin:0 auto;
+        font-family:Inter;
+        font-style:normal;
+        font-weight:600;
+        font-size:26px;
+        line-height:32px;
+        display:flex;
+        align-items:center;
+        color:rgba(47, 72, 106, 0.24);
+        flex:none;
+        order:0;
+        align-self:center;
       }
     }
-    .line1 {
-      position: relative;
-      display: flex;
-      width: 256px;
-      height: 1.13px;
-      left: 25px;
-      top: 40px;
-      background: #DCDFE2;
+    .available-rooms-line{
+      position:absolute;
+      width:960px;
+      height:1px;
+      top:30px;
+      background:#DCDFE2;
     }
-    .description {
+    .available-rooms-none-text{
       position: relative;
-      display: flex;
-      height: 24px;
-      top: 60px;
-      font-family: Inter;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 16px;
-      line-height: 24px;
-      /* identical to box height, or 150% */
-      display: flex;
-      justify-content: center;
-      /* Black */
-      color: #2F486A;
+      font-size:12px;
+      line-height:16px;
+      /* or 133% */
+      display:flex;
+      align-items:center;
+      text-align:center;
+      /* Second Black */
+      color:rgba(47, 72, 106, 0.75);
+      margin: 32px 16px;
     }
-    .line2 {
-      position: relative;
-      display: flex;
-      width: 256px;
-      height: 1.13px;
-      left: 25px;
-      top: 80px;
-      background: #DCDFE2;
+    .alternative-dates{
+      position:relative;
+      width:360px;
+      display:flex;
+      flex-direction:column;
+      .alternative-date{
+        position: relative;
+        margin: 0 auto 16px auto;
+        width: 304px;
+        height: 270px;
+        background: #FFFFFF;
+        box-shadow: 0px -2px 1px rgba(85, 89, 106, 0.0196802), 0px 2px 1px rgba(85, 89, 106, 0.0196802), 0px 4px 2px rgba(85, 89, 106, 0.0282725), 0px 6px 4px rgba(85, 89, 106, 0.035), 0px 8px 8px rgba(85, 89, 106, 0.0417275), 0px 18px 16px rgba(85, 89, 106, 0.0503198), 0px 30px 40px rgba(85, 89, 106, 0.07);
+        border-radius: 8px;
+        .group-110{
+          position:relative;
+          display:flex;
+          width:223px;
+          height:24px;
+          left:48px;
+          top:20px;
+          .first-date{
+            position:relative;
+            width:110px;
+            height:24px;
+            font-family:Inter;
+            font-style:normal;
+            font-weight:600;
+            font-size:14px;
+            line-height:20px;
+            display:flex;
+            align-items:center;
+            text-align:center;
+            color:#2F486A;
+            justify-content:flex-end;
+            left:-45px;
+          }
+          .minus-icon{
+            position:relative;
+            width:16px;
+            height:16px;
+            left:-8px;
+            top:6px;
+          }
+          .second-date{
+            position:relative;
+            width:110px;
+            height:24px;
+            left:30px;
+            font-family:Inter;
+            font-style:normal;
+            font-weight:600;
+            font-size:14px;
+            line-height:20px;
+            display:flex;
+            align-items:center;
+            text-align:center;
+            justify-content:flex-start;
+            color:#2F486A;
+          }
+        }
+      }
+      .line1{
+        position:relative;
+        display:flex;
+        width:256px;
+        height:1.13px;
+        left:25px;
+        top:40px;
+        background:#DCDFE2;
+      }
+      .description{
+        position:relative;
+        display:flex;
+        height:24px;
+        top:60px;
+        font-family:Inter;
+        font-style:normal;
+        font-weight:600;
+        font-size:14px;
+        line-height:20px;
+        /* identical to box height, or 150% */
+        display:flex;
+        justify-content:center;
+        /* Black */
+        color:#2F486A;
+      }
+      .line2{
+        position:relative;
+        display:flex;
+        width:256px;
+        height:1.13px;
+        left:25px;
+        top:80px;
+        background:#DCDFE2;
+      }
+      .price{
+        position:relative;
+        height:24px;
+        top:100px;
+        font-family:Inter;
+        font-style:normal;
+        font-weight:600;
+        font-size:14px;
+        line-height:20px;
+        /* identical to box height, or 150% */
+        display:flex;
+        justify-content:center;
+        /* Blue */
+        color:#267FF9;
+      }
+      .btn-large{
+        cursor:pointer;
+        position:relative;
+        margin:0 auto;
+        width:256px;
+        height:52px;
+        top:120px;
+      }
     }
-    .price {
-      position: relative;
-      height: 24px;
-      top: 100px;
-      font-family: Inter;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 16px;
-      line-height: 24px;
-      /* identical to box height, or 150% */
-      display: flex;
-      justify-content: center;
-      /* Blue */
-      color: #267FF9;
+  }
+}
+@media only screen and (min-width:1200px){
+  .available-rooms{
+    position:relative;
+    width:960px;
+    .section{
+      position:relative;
+      margin-top:54px;
     }
-    .btn-large {
-      @extend .clickable;
-      position: relative;
-      margin: 0 auto;
-      width: 256px;
-      height: 52px;
-      top: 120px;
+    .available-rooms-title-box{
+      display:flex;
+      flex-direction:row;
+      position:absolute;
+      width:299px;
+      height:56px;
+      background:#FAFBFC;
+      left:calc(50% - 299px / 2);
+      z-index:2;
+      .available-rooms-title{
+        position:static;
+        width:251px;
+        height:32px;
+        margin:0 auto;
+        font-family:Inter;
+        font-style:normal;
+        font-weight:600;
+        font-size:26px;
+        line-height:32px;
+        display:flex;
+        align-items:center;
+        color:rgba(47, 72, 106, 0.24);
+        flex:none;
+        order:0;
+        align-self:center;
+      }
+    }
+    .available-rooms-line{
+      position:absolute;
+      width:960px;
+      height:1px;
+      top:30px;
+      background:#DCDFE2;
+    }
+    .available-rooms-none-text{
+      position:relative;
+      width:631px;
+      height:48px;
+      top:18px;
+      font-family:Inter;
+      font-style:normal;
+      font-weight:normal;
+      font-size:16px;
+      line-height:24px;
+      margin:0 auto;
+      align-items:center;
+      text-align:center;
+      /* Second Black */
+      color:rgba(47, 72, 106, 0.75);
+      margin-bottom:32px;
+    }
+    .alternative-dates{
+      position:relative;
+      width:960px;
+      display:flex;
+      justify-content:space-between;
+      .alternative-date{
+        width:304px;
+        height:270px;
+        background:#FFFFFF;
+        /* 30 dp */
+        box-shadow:0px -2px 1px rgba(85, 89, 106, 0.0196802), 0px 2px 1px rgba(85, 89, 106, 0.0196802), 0px 4px 2px rgba(85, 89, 106, 0.0282725), 0px 6px 4px rgba(85, 89, 106, 0.035), 0px 8px 8px rgba(85, 89, 106, 0.0417275), 0px 18px 16px rgba(85, 89, 106, 0.0503198), 0px 30px 40px rgba(85, 89, 106, 0.07);
+        border-radius:8px;
+        .group-110{
+          position:relative;
+          display:flex;
+          width:223px;
+          height:24px;
+          left:48px;
+          top:20px;
+          .first-date{
+            position:relative;
+            width:110px;
+            height:24px;
+            font-family:Inter;
+            font-style:normal;
+            font-weight:600;
+            font-size:16px;
+            line-height:24px;
+            display:flex;
+            align-items:center;
+            text-align:center;
+            color:#2F486A;
+            justify-content:flex-end;
+            left:-45px;
+          }
+          .minus-icon{
+            position:relative;
+            width:16px;
+            height:16px;
+            left:-8px;
+            top:6px;
+          }
+          .second-date{
+            position:relative;
+            width:110px;
+            height:24px;
+            left:30px;
+            font-family:Inter;
+            font-style:normal;
+            font-weight:600;
+            font-size:16px;
+            line-height:24px;
+            display:flex;
+            align-items:center;
+            text-align:center;
+            justify-content:flex-start;
+            color:#2F486A;
+          }
+        }
+      }
+      .line1{
+        position:relative;
+        display:flex;
+        width:256px;
+        height:1.13px;
+        left:25px;
+        top:40px;
+        background:#DCDFE2;
+      }
+      .description{
+        position:relative;
+        display:flex;
+        height:24px;
+        top:60px;
+        font-family:Inter;
+        font-style:normal;
+        font-weight:600;
+        font-size:16px;
+        line-height:24px;
+        /* identical to box height, or 150% */
+        display:flex;
+        justify-content:center;
+        /* Black */
+        color:#2F486A;
+      }
+      .line2{
+        position:relative;
+        display:flex;
+        width:256px;
+        height:1.13px;
+        left:25px;
+        top:80px;
+        background:#DCDFE2;
+      }
+      .price{
+        position:relative;
+        height:24px;
+        top:100px;
+        font-family:Inter;
+        font-style:normal;
+        font-weight:600;
+        font-size:16px;
+        line-height:24px;
+        /* identical to box height, or 150% */
+        display:flex;
+        justify-content:center;
+        /* Blue */
+        color:#267FF9;
+      }
+      .btn-large{
+        cursor:pointer;
+        position:relative;
+        margin:0 auto;
+        width:256px;
+        height:52px;
+        top:120px;
+      }
     }
   }
 }
